# wr-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  config.json  deploy.sh  gemini_prompt.txt  redeem_bot.db  system-prompt.txt
.sqlx/: query-081dc29cf5f02057a5658832694d729b2638dfb3a731e3fdd32d5a4a50e2024c.json  query-17331b13764ce1f8bf93fcc3370dfa1ae98cbea0d665646d1012cca37046d9c4.json  query-176c2554a7f8b99eb2bbf61995b6d30b012867f51927991a8e0881dfd9dede36.json  query-22cf6b5115828d578f8aa0bfabe980c5a0b14fa327be362c9f06accb7ba138a4.json  query-2ede51b9d9fa8ceac97e2a8265522704f19138b9f9ad348ae82033488d13a6c5.json  query-4617bf5e2f1d38078f6af322b3d8b7985901dd8b21921e047a7d723147d05bf6.json  query-4ad2393aa6a4380039463ffe5208c844ad5d6b4ed4fa6da89f15adbb797458cb.json  query-50228de64003ca0fa3bff71df10ab81e24748309ec5823f826823e1f55652ca0.json  query-544e1b7eecdaadf4da28bf962b7a0d6eb88975a40fc8eb28092b83f5c1b29135.json  query-5f4e3101e804258694f81fcbe53d53e78316ca30c31f644727378e76cbd7b475.json  query-669b2c9b542223be265e738f66be916c9ef0c3f947c9bcc06afc343c9c3fd0ff.json  query-6de5457a57046e7ed8b63ac3721032ea451f69188ff49f4cfc5cc40763f096a8.json  query-7a49fc7c1616720ec7d01d2b28d085c5e10678f1b2b9beea6894c595a643558b.json  query-8538671a9a3f3cbec079f3dbff3e65fe4c303339bd4fffaef68223327491d89f.json  query-8673d03d93166b96629128d62ada5a475e11e1f48622fc82106b691087fb817d.json  query-94c4442eb4a2a6eb1b48019e4f22725abe52b4d69e035624900bc273603297ee.json  query-97ee0c50cecfe21ca19cc8ba87afddd72c3405759651fa9346d2f3a876dc0626.json  query-9916ed7be567ffb8f062c8811ee29fd324b408523d5e282097e5e27e9cad5bb8.json  query-9a3416a666386f801108d5fb41340901cade78833322e3468bc24d4adb12230c.json  query-9fc5cfe0e8c055c7a47ce85735945de042cc174c447770e4ecc23d25c62240a1.json  query-a2b148b5b669cf5db716d1500786fdc57f2940f375d06bafdd9eaa1611e7d5ef.json  query-a989bea2b5191776a2b5b6b745ad55c4a33b58b685e23b3fe27e5ba9ac75ceff.json  query-a9f108e255c3ed59af3aba1a6a19d865c2ec42b9d3056d9f544359e44f48f56d.json  query-adca9720905538e71f8636f8ca82b580e93ec571db54638386e18342c427a326.json  query-ae5ac9671146abc03440926ceee528e204264eb295979a7a803807b57417dd8a.json  query-b41bbeae5e1570192f9c2ad850ed4ee6fde3d8c1eac8d4da906eb4a09be3352a.json  query-d2a7d0185a4260405c148a47c90201d6260719165628e4309075611a6e36bdff.json  query-e4ab1a49b4666e08d6820e4e0e2a6d003decbe8ba9862db70d9b3aa5ce648b45.json  query-e6f2a288173302f16e4c472e7ad03f6934704c2cb5c35d7583beb1aa23e1be14.json  (+3 more)
init-db/: 01-create-readonly-user.sh
lavalink/: application.yml
(+44 files in other folders)
