[package]
name = "worm"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
serenity = {version = "0.12.4", features = ["full"]}
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
poise = "0.6.1"
reqwest = { version= "0.12.24", features = ["json"] }
sysinfo = "0.35.0"
rusqlite = {version = "0.37.0", features = ["bundled"]}
uuid = {version = "1.18.1", features = ["v4"] }