[package]
name = "worm"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
serenity = { version = "0.12.4", features = ["full"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
poise = "0.6.1"
reqwest = { version = "0.12.24", features = ["json"] }
sysinfo = "0.35.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = { version = "0.4.42", features = ["serde"] }
urlencoding = "2.1.3"
songbird = { version = "0.4", default-features = false, features = [
    "serenity",
    "gateway",
    "rustls",
] }
lavalink-rs = { version = "0.14", features = ["serenity"] }
async-trait = "0.1"
parking_lot = "0.12"
once_cell = "1.19"
rss = "2.0"
chrono-tz = "0.10"
quick-xml = "0.37"
regex-lite = "0.1"
