[package]
name = "worm"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
serenity = { version = "0.12.4", features = ["full"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
poise = "0.6.1"
reqwest = { version = "0.12.24", features = ["json"] }
sysinfo = "0.35.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4.42", features = ["serde"] }
urlencoding = "2.1.3"
songbird = { version = "0.4", default-features = false, features = [
    "serenity",
    "gateway",
    "rustls",
] }
lavalink-rs = { version = "0.14", features = ["serenity"] }
async-trait = "0.1"
parking_lot = "0.12"
once_cell = "1.19"
rss = "2.0"
chrono-tz = "0.10"
quick-xml = "0.37"
regex-lite = "0.1"
gemini-rust = "1.7.1"
base64 = "0.22.1"
yt-dlp = { version = "1.4.7", default-features = false, features = ["tracing"] }
uuid = "1.19.0"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
